# sim_alpha_project

./: .gitignore  CMakeLists.txt  README.md  example_simulation_DNA_Alpha_copy_16_1Nov_600.csv  main.cc  plot_all_test.c  pos.mac  pp  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RE01TrackInformation.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackInformation.hh
plot_code/: doseluj.py  testlujcDSB.py  totalSB_DS_cDS.py
result_alpha/: example_simulation_DNA_Alpha_copy_16_1Nov_600.csv
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  G4RadioactiveDecay.cc  G4RadioactiveDecayPhysics.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RE01TrackInformation.cc  RunAction.cc  StakingAction.cc  SteppingAction.cc  TrackInformation.cc
